# mcts-material-synthesis

./: .gitignore  CLAUDE.md  COMPLETION_ROADMAP.md  FINAL_STATUS.md  IMPLEMENTATION_SUMMARY.md  MCTS_Materials_Synthesis_Project_Proposal.docx  PROJECT_STATUS.md  README.md  config.example.json  config.example.py  dos_only_study.py  filter_dataset.py  pyproject.toml  requirements.txt  run_mcts.py
.github/workflows/: tests.yml
analysis/discovery_efficiency_study/: generate_figures.py  run_extended_mode.sh
analysis/ehull_rdos_lanthanide_u_study_max_undiscounted/: all_compounds.csv  all_compounds_by_composite_score.csv  convergence_history.csv  generate_figures.py  run_study.sh  top15_compounds_by_composite_score.csv
docs/: ARCHITECTURE.md  DATASETS.md
mcts_crystal/: __init__.py  analysis.py  cli.py  doscar_utils.py  energy_calculator.py  mcts.py  node.py  visualization.py
sensitivity_studies/: README.md
synthesis_planner/: __init__.py  benchmark.py  chemistry.py  cli.py  constraints.py  datasets.py  failure_taxonomy.py  formula.py  grammar.py  judge.py  judge_calibration.py  materials_project.py  mcts.py  planner.py  retrieval.py  schema.py  scoring.py
tests/: conftest.py  test_benchmark.py  test_chemistry.py  test_cli.py  test_constraints.py  test_datasets.py  test_diversity.py  test_doscar_utils.py  test_ensemble_judge.py  test_formula.py  test_judge.py  test_judge_calibration.py  test_materials_project.py  test_mcts.py  test_node.py  test_operation_alignment.py  test_partial_judge.py  test_planner.py  test_reaction_driving_force.py  test_retrieval.py  test_scoring.py
utils/: calculate_doscar_rewards.py
(+69 files in other folders)
