[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mcts-material-synthesis"
version = "0.2.0"
description = "Target-conditioned MCTS synthesis planning for inorganic materials"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
mcts-plan = "synthesis_planner.cli:main"

[tool.setuptools]
packages = ["synthesis_planner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
